--- a/Runtime/EventStore/package.json
+++ b/Runtime/EventStore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eventstore",
+  "name": "@dolittle/eventstore-migrator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
