--- a/Runtime/EventStore/package.json
+++ b/Runtime/EventStore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dolittle/eventstore-migrator",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Migrator for the Dolittle Event Store",
   "main": "Distribution/index.js",
   "types": "Distribution/index.d.ts",
@@ -20,18 +20,24 @@
   },
   "homepage": "https://github.com/dolittle/migrations#readme",
   "scripts": {
-    "prebuild": "rm -rf Distribution",
-    "prepublish": "yarn build",
-    "build": "tsc -b",
     "dev": "nodemon --watch $(pwd) -e ts --exec 'ts-node' index.ts",
     "debug": "nodemon --inspect=5858 -e ts --exec node -r ts-node/register index.ts",
     "start": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "yarn clean",
+    "postbuild": "yarn lint",
+    "build": "tsc -b",
+    "clean": "gulp clean --gulpfile ../../node_modules/@dolittle/typescript.build/Gulpfile.js",
+    "test": "yarn build && yarn test:run",
+    "test:run": "gulp test-run --gulpfile ../../node_modules/@dolittle/typescript.build/Gulpfile.js",
+    "test:clean": "gulp test-clean --gulpfile ../../node_modules/@dolittle/typescript.build/Gulpfile.js",
+    "lint": "gulp lint --gulpfile ../../node_modules/@dolittle/typescript.build/Gulpfile.js",
+    "lint:fix": "gulp lint-fix --gulpfile ../../node_modules/@dolittle/typescript.build/Gulpfile.js"
   },
   "author": "Dolittle",
   "license": "MIT",
   "devDependencies": {
     "@types/mongoose": "5.7.36",
+    "gulp": "^4.0.2",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
