--- a/Runtime/EventStore/package.json
+++ b/Runtime/EventStore/package.json
@@ -25,6 +25,7 @@
     "start": "ts-node index.ts",
     "prebuild": "yarn clean",
     "postbuild": "yarn lint",
+    "prepublish": "yarn build",
     "build": "tsc -b",
     "clean": "gulp clean --gulpfile ../../node_modules/@dolittle/typescript.build/Gulpfile.js",
     "test": "yarn build && yarn test:run",
