Adding debugging capability

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/Runtime/EventStore/index.ts",
+            "request": "launch",
+            "preLaunchTask": "tsc: build - Runtime/EventStore/tsconfig.json",
+            "outFiles": ["${workspaceFolder}/Runtime/EventStore/Distribution/**/*.js"],            
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+        {
             "name": "Attach by Process ID",
             "processId": "${command:PickProcess}",
             "request": "attach",
