--- a/Runtime/EventStore/package.json
+++ b/Runtime/EventStore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dolittle/eventstore-migrator",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Migrator for the Dolittle Event Store",
   "main": "Distribution/index.js",
   "types": "Distribution/index.d.ts",
@@ -37,6 +37,7 @@
   "author": "Dolittle",
   "license": "MIT",
   "devDependencies": {
+    "@types/cli-progress": "^3.8.0",
     "@types/mongoose": "5.7.36",
     "gulp": "^4.0.2",
     "nodemon": "^2.0.4",
@@ -46,6 +47,7 @@
   "dependencies": {
     "@dolittle/rudiments": "^5.0.0",
     "@typegoose/typegoose": "7.3.4",
+    "cli-progress": "^3.8.2",
     "mongoose": "5.10.1",
     "reflect-metadata": "0.1.13",
     "type-graphql": "1.0.0",
